--- a/client/templates/mainLayout/topBar.html
+++ b/client/templates/mainLayout/topBar.html
@@ -1,7 +1,7 @@
 <template name="topBar">
 	<nav class="navbar navbar-default navbar-fixed-top">
 	    <div class="container">
-	        <div id="navbar" class="navbar-collapse collapse">
+	        <div id="navbar" class="navbar-collapse">
 		        <ul class="nav navbar-nav navbar-right">
 		            <li><span class="navbar-text text-right">{{_ 'Hi'}} {{currentUser.profile.name}}</span></li>
 		            <li class="active"><a href="{{pathFor 'Logout'}}">{{_ "logout"}}</a></li>
