--- a/client/templates/login/login.html
+++ b/client/templates/login/login.html
@@ -7,6 +7,6 @@
 				<input id="{{id}}" class="form-control" type="{{type}}" placeholder="{{_ label}}" />
 			</div>
 		{{/each}}
-		<input type="submit" class="btn btn-default" value="{{_ 'Login'}}" />
+		<input type="submit" class="btn btn-default" value="{{_ 'Do Login'}}" />
 	</form>
 </template>
